<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/pauseLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/app_back"
    tools:showIn="@layout/activity_pause_game" tools:context="com.group9.factormebud.PauseGame">
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btResume"
        android:id="@+id/btResume"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:background="@drawable/enter_back"
        android:padding="20dp"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:nestedScrollingEnabled="false" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btRestart"
        android:id="@+id/btRestart"
        android:layout_below="@+id/btResume"
        android:layout_centerHorizontal="true"
        android:background="@drawable/enter_back"
        android:padding="20dp"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:clickable="true" />

    <Switch
        android:id="@+id/swPSound"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/swSound"
        android:padding="20dp"
        android:textColor="#ffffffff"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textOn="@string/switch_on"
        android:textOff="@string/switch_off"
        android:showText="true"
        android:nestedScrollingEnabled="false"
        android:switchTextAppearance="@style/SwitchTheme"
        android:layout_below="@+id/btRestart" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btQuit"
        android:id="@+id/btQuit"
        android:layout_below="@+id/swPSound"
        android:layout_centerHorizontal="true"
        android:background="@drawable/enter_back"
        android:padding="20dp"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:clickable="true" />

</RelativeLayout>
