<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/app_back"
    android:id="@+id/mainlayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/btPlay"
        android:id="@+id/btPlay"
        android:layout_marginTop="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:background="@drawable/enter_back"
        android:padding="20dp"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:nestedScrollingEnabled="false" />

    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/btLevels"
        android:id="@+id/btLevels"
        android:layout_below="@+id/btPlay"
        android:layout_centerHorizontal="true"
        android:background="@drawable/enter_back"
        android:padding="20dp"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:clickable="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/btSettings"
        android:id="@+id/btSettings"
        android:layout_below="@+id/btLevels"
        android:layout_centerHorizontal="true"
        android:background="@drawable/enter_back"
        android:padding="20dp"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/High_Score"
        android:id="@+id/sCurLvlHsc"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btSettings"
        android:layout_alignEnd="@+id/btSettings"
        android:layout_marginRight="115dp"
        android:layout_marginEnd="115dp"
        android:padding="10dp"
        android:textColor="#ffffffff"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Factor Me"
        android:id="@+id/textView2"
        android:textColor="#ffffffff"
        android:fontFamily="sans-serif-medium"
        android:textSize="65sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
